# jarvis

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.linux.yml  docker-compose.macos.yml  docker-compose.yml  pyproject.toml
src/jarvis/: __init__.py  brain.py  config.py  listener.py  llm.py  main.py  player.py  prompt.txt  recorder.py  sounds.py  speaker.py  stt.py  tools.py  tts.py  wake.py
tools/: record_wake.py
