[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "e1turin", email = "ivturnik2003@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
jarvis = "jarvis:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
