[project]
name = "jarvis"
version = "0.1.0"
description = "Voice AI assistant with wake word detection, STT, LLM, and TTS"
readme = "README.md"
authors = [
    { name = "e1turin", email = "ivturnik2003@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.0.0",
    "vosk>=0.3.44,<0.3.45",
    "httpx[socks]>=0.27.0",
    "ddgs>=1.0.0"
]

[project.scripts]
jarvis = "jarvis.main:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
